fix: collapse, drawer, progress 样式调整

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -215,6 +215,7 @@
 @radio-focus-shadow: 0 0 0 0 var(--theme-border-focus-color);
 @radio-duration: 0;
 @radio-button-hover-color: var(--radio-button-hover-color);
+@radio-dot-size: 10px;
 
 // Modal
 // ---
@@ -280,6 +281,7 @@
 
 // Breadcrumb
 // ---
+@breadcrumb-link-color: var(--theme-text-color);
 @breadcrumb-link-color-hover: var(--theme-primary-color);
 
 // Steps
