--- a/packages/ui/progress/src/index.less
+++ b/packages/ui/progress/src/index.less
@@ -7,8 +7,13 @@
         }
     }
 
+    &.@{ant-prefix}-progress-line {
+        font-size: 14px;
+    }
+
     .@{ant-prefix}-progress-text {
         color: var(--progress-text-color);
+        font-size: var(--progress-text-font-size);
     }
 
     &.@{ant-prefix}-progress-status-exception .@{ant-prefix}-progress-text {
@@ -26,8 +31,8 @@
 
         .@{ant-prefix}-progress-bg::before {
             background: var(--theme-primary-color);
-            animation: osui-progress-active 2.4s cubic-bezier(.23, 1, .32, 1) infinite;
             border-radius: var(--progress-radius);
+            animation: osui-progress-active 2.4s cubic-bezier(.23, 1, .32, 1) infinite;
         }
     }
 }
